compile less css and js files

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <title>NoteU</title>
   <link rel="shortcut icon" href="image/icon.png" type="image/x-icon">
   <link rel="icon" href="image/icon.png" type="image/ico">
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"/>
   <script src="//cdnjs.cloudflare.com/ajax/libs/dropbox.js/0.9.1/dropbox.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-  <script src="jeditable.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/jeditable.js" type="text/javascript" charset="utf-8"></script>
   <!--Alert message-->
-  <script type='text/javascript' src='jquery.simplemodal.js'></script> 
-  <link type='text/css' href='basic.css' rel='stylesheet' media='screen' />
+  <script type='text/javascript' src='js/jquery.simplemodal.js'></script>
+  <link type='text/css' href='css/basic.css' rel='stylesheet' media='screen' />
   <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.5/require.min.js"></script>
-  <script src="ItemMirror.min.js"></script>
-  <script type="text/javascript" src="noteu.itemMirror.js"></script>
+  <script src="js/ItemMirror.min.js"></script>
+  <script type="text/javascript" src="js/noteu.itemMirror.js"></script>
 </head>
 
 <body>
