switch user image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- topbar -->
   <div id="topbar">
     <span id="username"></span>  
-    <img src="user.png" width="32" height="32" alt="user" />
+    <img src="image/user.png" width="32" height="32" alt="user" />
   </div>
 
   <!--alert mag-->
